MDEV-24298 Select Handler now process INSERT..SELECT with a single derived at top level